<resources>
    <string name="app_name">DroidDesserts</string>
    <string name="action_settings">Settings</string>
    <string name="intro_text">Droid Desserts</string>
    <string name="choose_a_dessert">Choose a dessert</string>
    <string name="donutText">Donuts are glazed and sprinkled with candy.</string>
    <string name="todo">TODO</string>
    <string name="sandwitchText">Ice cream sandwitches have chocolate wafers and vanilla filling</string>
    <string name="iceclreamText">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="choode_delivery_method">Choose a delivery method:</string>
    <string name="messenger">Same day messenger delivery</string>
    <string name="ground">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="chosen">Chosen: </string>
    <string name="nothing_clicked">Pick up</string>
</resources>
